--- a/.github/workflows/pipeline.aws.yaml
+++ b/.github/workflows/pipeline.aws.yaml
@@ -61,11 +61,11 @@ jobs:
             $(cd .github/workflows/kms && terraform output -raw kms_key_arn )
       - name: get KMS key
         working-directory: .github/workflows/kms
-        id: get-kms
+        id: get
         run: |
-          terraform output -raw kms_key_arn
+          terraform output -raw kms_key_arn >> $GITHUB_OUTPUT
       - name: debug
-        run: echo ${{ steps.get-kms.outputs.stdout }} ${{ env.OIDC }} env $KMS
+        run: echo ${{ steps.get.outputs.* }} ${{ env.OIDC }} env $KMS
         env:
           OIDC: $${{steps.get-kms.outputs.stdout}}
       # - name: Show Cluster
