--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -27,6 +27,10 @@ variables:
   description: "The KMS Key Arn for encrypting and decrypting data in loki"
   default: ""
 
+- name: LOKI_FORCE_DESTROY
+  description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
+  default: "false"
+
 components:
   - name: download-terraform
     required: true
