values files schema changes
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -35,7 +35,14 @@ istio:
       tls:
         key: "###ZARF_VAR_PUBLIC_KEY###"
         cert: "###ZARF_VAR_PUBLIC_CERT###"
-istiooperator:
+  #   # admin:
+  #   #   tls:
+  #   passthrough:
+  #     hosts:
+  #       - "*.{{ .Values.domain }}"
+  #     tls:
+  #       mode: "PASSTHROUGH"
+istioOperator:
   enabled: true
   values:
     operator:
