AWS distro: Updating the rights on the loki folder so they can be overlayed when doing a zarf deploy

--- a/aws/zarf.yaml
+++ b/aws/zarf.yaml
@@ -68,6 +68,8 @@ components:
         before:
           - cmd: "terraform init -upgrade"
             dir: loki
+        after:
+          - cmd: "test -d ./run/ && chmod -R ugo+rwx ./run/ || echo $?"
     files:
     # terraform code
     - source: loki/.terraform
