Add checkout step before calling reusable workflow

--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        
       - name: Setup AWS credentials, Install Zarf, Login to Registry1
         uses: ./.github/workflows/reusable-workflow.yml
     
