Upload entire zarf-cache directory
Fail if path is not found

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -29,8 +29,8 @@ jobs:
         with:
           name: zarf-artifacts
           path: |
-            zarf-init-amd64-*.tar.zst
-            /usr/local/bin/zarf
+            ${HOME}/.zarf-cache/
+          if-no-files-found: error 
 
       - name: Login to Registry1
         env:
