Hardcode the home dir since we are only on linux

--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           name: zarf-artifacts
           path: |
-            ${HOME}/.zarf-cache/
+            /home/runner/.zarf-cache/
           if-no-files-found: error 
 
       - name: Login to Registry1
