fix: updating istio values and config example

--- a/values/istio.yaml
+++ b/values/istio.yaml
@@ -3,24 +3,8 @@ istio:
   ingressGateways:
     passthrough-ingressgateway:
       type: "LoadBalancer"
-      kubernetesResourceSpec:
-        resources:
-          requests:
-            cpu: "100m"
-            memory: "512Mi"
-          limits:
-            cpu: "500m"
-            memory: "512Mi"
     public-ingressgateway:
       type: "LoadBalancer"
-      kubernetesResourceSpec:
-        resources:
-          requests:
-            cpu: "100m"
-            memory: "512Mi"
-          limits:
-            cpu: "500m"
-            memory: "512Mi"
   values:
     istiod:
       resources:
@@ -48,7 +32,7 @@ istio:
     passthrough:
       ingressGateway: passthrough-ingressgateway
       hosts:
-        - keycloak.{{ .Values.domain }}
+        - "*.{{ .Values.domain }}"
       tls:
         mode: "PASSTHROUGH"
 istiooperator:
