--- a/values/loki.yaml
+++ b/values/loki.yaml
@@ -4,4 +4,4 @@ loki:
   values:
     singleBinary:
       persistence:
-          size: ###ZARF_VAR_LOKI_PVC_SIZE###
+          size: "###ZARF_VAR_LOKI_PVC_SIZE###"
