--- a/defense-unicorns-distro/zarf.yaml
+++ b/defense-unicorns-distro/zarf.yaml
@@ -132,7 +132,7 @@ components:
             description: Cleanup validating webhoooks from kyverno
           - cmd: ./zarf tools kubectl delete helmrelease -n bigbang kiali --ignore-not-found
           - cmd: ./zarf tools kubectl delete helmrelease -n bigbang metrics-server --ignore-not-found
-          - cmd: ./zarf tools kubectl delete gitrepositories -n bigbang --all
+          - cmd: ./zarf tools kubectl delete gitrepositories -n bigbang -l app.kubernetes.io/part-of=bigbang
           - cmd: ./zarf tools kubectl delete apiservices.apiregistration.k8s.io v1beta1.metrics.k8s.io --ignore-not-found
     manifests:
       - name: slack-alerts
