--- a/cocowow/zarf.yaml
+++ b/cocowow/zarf.yaml
@@ -51,6 +51,7 @@ components:
         # look at imports and then merging here for composition
         - ../values/authservice.yaml
         - ../values/keycloak.yaml
+        - customization.yaml
   - name: configure-keycloak
     required: true
     files:
@@ -67,16 +68,26 @@ components:
             description: Login into keycloak as admin and save the config for future commands
           - cmd: ./kc-api/bin/kcadm.sh create realms -s realm=cocowow -s enabled=true
             description: Create the Cocowow realm
-          - cmd: ./kc-api/bin/kcadm.sh create users -r cocowow -s username=demo -s enabled=true 
+          - cmd: ./kc-api/bin/kcadm.sh create users -r cocowow -s username=demo -s email=demo@example.com -s enabled=true 
             description: Update the 'demo' user's password
           - cmd: ./kc-api/bin/kcadm.sh set-password -r cocowow --username demo --new-password supersecretpassword --temporary
             description: Update the 'demo' user's password
-          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=###ZARF_PKG_TMPL_MISSION_APP_NAME### -s enabled=true -s 'redirectUris=["https://podinfo.bigbang.dev/login/generic_oauth"]'
+          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=tempo -s enabled=true -s 'redirectUris=["https://tracing.###ZARF_PKG_TMPL_DOMAIN###/login"]'
+            description: "Add tempo client in keycloak"
+          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=kiali -s enabled=true -s 'redirectUris=["https://kiali.###ZARF_PKG_TMPL_DOMAIN###/kiali"]'
+            description: "Add grafana client in keycloak"
+          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=grafana -s enabled=true -s 'redirectUris=["https://grafana.###ZARF_PKG_TMPL_DOMAIN###/login/generic_oauth"]'
+            description: "Add kiali client in keycloak"
+          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=neuvector -s enabled=true -s 'redirectUris=["https://neuvector.###ZARF_PKG_TMPL_DOMAIN###/openId_auth"]'
+            description: "Add neuvector client in keycloak"
+          - cmd: ./kc-api/bin/kcadm.sh create clients -r cocowow -s clientId=###ZARF_PKG_TMPL_MISSION_APP_NAME### -s enabled=true -s 'redirectUris=["https://podinfo.###ZARF_PKG_TMPL_DOMAIN###/login/generic_oauth"]'
             description: "Add a service account for the ###ZARF_PKG_TMPL_MISSION_APP_NAME### application"
           - cmd: ./kc-api/bin/kcadm.sh get clients -r cocowow -q clientId=###ZARF_PKG_TMPL_MISSION_APP_NAME### --fields=secret | jq -r ".[].secret"
             description: "Extract the secret string of the ###ZARF_PKG_TMPL_MISSION_APP_NAME### service account in Keycloak"
             setVariables:
             - name: MISSION_APP_SECRET
+          - cmd: ./scripts/update-admin-services-sso.sh
+            description: Update the chain data for the cluster's admin services
   - name: mission-app
     required: true
     import:
