--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -1,74 +1,149 @@
-name: DUBBD
+# name: DUBBD
 
-on:
-  pull_request:
-    branches:
-      - main
+# on:
+#   pull_request:
+#     branches:
+#       - main
 
-jobs:
-  eksctl:
-    runs-on: ubuntu-latest
-  
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# jobs:
+#   clean-install:
+#     runs-on: ubuntu-latest
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
 
-      - name: Install Zarf
-        uses: defenseunicorns/setup-zarf@main
-        with:
-          # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
-          version: v0.26.2
-          download-init-package: true
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-west-2
 
-      - name: Login to Registry1
-        uses: docker/login-action@v2
-        with:
-          registry: registry1.dso.mil
-          username: ${{ secrets.REGISTRY1_USERNAME }}
-          password: ${{ secrets.REGISTRY1_PASSWORD }}
+#       - name: Install Zarf
+#         uses: defenseunicorns/setup-zarf@main
+#         with:
+#           # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
+#           version: v0.26.2
+#           download-init-package: true
+
+#       - name: Login to Registry1
+#         uses: docker/login-action@v2
+#         with:
+#           registry: registry1.dso.mil
+#           username: ${{ secrets.REGISTRY1_USERNAME }}
+#           password: ${{ secrets.REGISTRY1_PASSWORD }}
     
-      - name: Package EKSCTL 
-        run: zarf package create --confirm
-        working-directory: .github/workflows/eks
+#       - name: Package EKSCTL 
+#         run: zarf package create --confirm
+#         working-directory: .github/workflows/eks
 
-      - name: Create EKS cluster
-        run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${GITHUB_SHA:0:7}
-        working-directory: .github/workflows/eks
-        # eventually have zarf deploy   \
-      - name: Show Cluster
-        run: |
-          kubectl get nodes
+#       - name: Create DUBBD Package
+#         run: zarf package create --confirm
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
 
-      - name: Zarf init
-        run: |
-          zarf init -a amd64 --components=git-server --confirm
+#       - name: Create EKS cluster
+#         run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${GITHUB_SHA:0:7}
+#         working-directory: .github/workflows/eks
+#         # eventually have zarf deploy   \
+#       - name: Show Cluster
+#         run: |
+#           kubectl get nodes
 
-      - name: Create DUBBD
-        run: zarf package create --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
+#       - name: Zarf init
+#         run: |
+#           zarf init -a amd64 --components=git-server --confirm
       
-      - name: Deploy DUBBD
-        run: zarf package deploy zarf-package-*.tar.zst --confirm -l debug
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
+#       - name: Deploy DUBBD
+#         run: zarf package deploy zarf-package-*.tar.zst --confirm -l debug
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
 
-      - name: Remove DUBBD
-        run: zarf package remove zarf-package-*.tar.zst --confirm
-        working-directory: defense-unicorns-distro
-        timeout-minutes: 60
+#       - name: Remove DUBBD
+#         run: zarf package remove zarf-package-*.tar.zst --confirm
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
 
-      - name: Teardown EKS cluster
-        if: always()
-        # can't do a zarf package remove since there's no kubernetes cluster.
-        run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
-        working-directory: .github/workflows/eks
+#       - name: Teardown EKS cluster
+#         if: always()
+#         # can't do a zarf package remove since there's no kubernetes cluster.
+#         run: |
+#           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+#         working-directory: .github/workflows/eks
 
+#   upgrade:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v3
+
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-west-2
+
+#       - name: Install Zarf
+#         uses: defenseunicorns/setup-zarf@main
+#         with:
+#           # renovate: datasource=github-tags depName=defenseunicorns/zarf versioning=semver
+#           version: v0.26.2
+#           download-init-package: true
+
+#       - name: Login to Registry1
+#         uses: docker/login-action@v2
+#         with:
+#           registry: registry1.dso.mil
+#           username: ${{ secrets.REGISTRY1_USERNAME }}
+#           password: ${{ secrets.REGISTRY1_PASSWORD }}
+
+#       - name: Package EKSCTL 
+#         run: zarf package create --confirm
+#         working-directory: .github/workflows/eks
+
+#       - name: Create DUBBD Package
+#         run: zarf package create --confirm
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
+
+#       - name: Create EKS cluster
+#         run: zarf package deploy zarf-package-distro-eks-multi.tar.zst --confirm --set cluster_name=${GITHUB_SHA:0:7}
+#         working-directory: .github/workflows/eks
+#         # eventually have zarf deploy   \
+#       - name: Show Cluster
+#         run: |
+#           kubectl get nodes
+
+#       - name: Zarf init
+#         run: |
+#           zarf init -a amd64 --components=git-server --confirm
+
+#       - name: Get Latest DUBBD Package Version
+#         id: dubbd-version
+#         uses: ./.github/actions/dubbd-version
+#         with:
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+#       - name: Deploy Latest DUBBD Package
+#         run: zarf package deploy oci://ghcr.io/defenseunicorns/packages/big-bang-distro/big-bang:${{ steps.dubbd-version.outputs.latest-dubbd-version }} --confirm -l debug
+#         timeout-minutes: 60
+
+#       - name: Deploy DUBBD
+#         run: zarf package deploy zarf-package-*.tar.zst --confirm -l debug
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
+
+#       - name: Remove DUBBD
+#         run: zarf package remove zarf-package-*.tar.zst --confirm
+#         working-directory: defense-unicorns-distro
+#         timeout-minutes: 60
+
+#       - name: Teardown EKS cluster
+#         if: always()
+#         # can't do a zarf package remove since there's no kubernetes cluster.
+#         run: |
+#           ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+#         working-directory: .github/workflows/eks
