--- a/.github/workflows/test-version-action.yml
+++ b/.github/workflows/test-version-action.yml
@@ -9,6 +9,9 @@ jobs:
   test-version-action:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Get Latest DUBBD Package Version
         id: dubbd-version
         uses: ./.github/actions/dubbd-version
