--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -146,7 +146,7 @@ jobs:
       - name: Remove DUBBD
         run: |
           zarf package remove zarf-package-*.tar.zst --confirm
-          zarf package remove oci://ghcr.io/defenseunicorns/packages/big-bang-distro/big-bang:${{ steps.dubbd-version.outputs.latest-dubbd-version }}
+          zarf package remove oci://ghcr.io/defenseunicorns/packages/big-bang-distro/big-bang:${{ steps.dubbd-version.outputs.latest-dubbd-version }} --confirm
         working-directory: defense-unicorns-distro
         timeout-minutes: 60
 
@@ -154,5 +154,5 @@ jobs:
         if: always()
         # can't do a zarf package remove since there's no kubernetes cluster.
         run: |
-          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --wait
+          ./eksctl delete cluster -f config.yaml --disable-nodegroup-eviction --force --wait
         working-directory: .github/workflows/eks
