--- a/.github/workflows/pipeline.dubbd.yaml
+++ b/.github/workflows/pipeline.dubbd.yaml
@@ -165,4 +165,4 @@ jobs:
 
       - name: Save logs
         if: always()
-        uses: defenseunicorns/zarf@main/.github/actions/save-logs
+        uses: defenseunicorns/zarf/.github/actions/save-logs@main
