Add cluster_name var back to EKS package
The variable was getting read in correctly
The naming collision was caused by the name using the same commit sha

--- a/.github/workflows/eks/zarf-config.yaml
+++ b/.github/workflows/eks/zarf-config.yaml
@@ -4,3 +4,7 @@ package:
     set:
       bigbang_version: "2.0.1"
       eksctl_version: v0.138.0
+
+  deploy:
+    set: 
+      cluster_name: bigbang-aws-install
