--- a/.github/workflows/eks/zarf.yaml
+++ b/.github/workflows/eks/zarf.yaml
@@ -4,6 +4,10 @@ metadata:
   description: "Deploy a EKS K8s cluster"
   architecture: multi
 
+variables:
+  - name: CLUSTER_NAME
+    prompt: true
+
 components:
   - name: load-eksctl
     required: true
@@ -31,8 +35,6 @@ components:
     actions:
       onDeploy:
         before:
-          - cmd: cluster_name="dubbd-$(openssl rand -hex 8)" && yq ".metadata.name = \"$cluster_name\"" -i config.yaml
-            description: Generate a unique cluster name and add it to the eksctl config file
           - cmd: ./eksctl create cluster --dry-run -f config.yaml
           - cmd: sleep 15
           - cmd: ./eksctl create cluster -f config.yaml
